--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/jxk20/nlb_goodreads_searcher-heroku#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "strong-soap": "^3.4.0"
   },
   "engines": {
     "node": "16.13.0"
