Install @babel/plugin-transform-runtime to fix 'Uncaught [ReferenceError: regeneratorRuntime is not defined]' error

--- a/client/package.json
+++ b/client/package.json
@@ -39,5 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.0"
+  }
 }
