--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,11 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.17.0"
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
   }
 }
