change codecov version

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,5 +38,7 @@ jobs:
         run: cd client && npm test -- --coverage
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
+        with:
+          version: "v0.1.15"
       - name: Build
         run: npm run build
