--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,4 +42,4 @@ jobs:
         with:
           version: "v0.1.15"
       - name: Build
-        run: npm run build
+        run: CI=false && npm run build
