--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,6 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.3"
+    "babel-core": "^6.26.3"
   }
 }
