--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App",
+  "short_name": "NLB Goodreads Searcher",
   "name": "Create React App Sample",
   "icons": [
     {
